generator/testdata/rpc/errors/bad-first-arg/greeter.remoto.go
package testdata

type Greeter interface {
	Greet() GreetResponse
}

type GreetRequest struct {
	Name string
}

type GreetResponse struct {
	Greeting string
}
